chore: Update target JavaScript version to es2020 in tsconfig.json

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       align="center"
       data-state-initialvalue="0"
     >
-      current counter is {state} {state.dsada}
+      current counter is {stated sa23 213} {state}
     </h1>
     <div style="display: flex; justify-content: center; width: 100%; gap: 2rem">
       <button
