--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       align="center"
       data-state-initialvalue="0"
     >
-      current counter is {state ? state.counter + 10 : null} {state.counter}
+      current counter is {state.dsadas ? state.counter : null} {state.counter} 
     </h1>
     <div style="display: flex; justify-content: center; width: 100%; gap: 2rem">
       <button
@@ -25,7 +25,7 @@
       >
         Plus
       </button>
-      <script  >
+      <script>
         const decrease = (e, states) => {
           StateManager.UpdateState(
             "counter",
