--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/dist/index.js"></script>
-    <script src="/dist/state.js"></script>
+    <script src="/dist/state.js" type="module" defer></script>
     <title>Document</title>
   </head>
   <body>
@@ -14,7 +13,7 @@
       align="center"
       data-state-initialvalue="0"
     >
-      current counter is {state ? state.counter + 10 : null} {state.counter} 
+      current counter is {state ? state.counter + 10 : null} {state.counter}
     </h1>
     <div style="display: flex; justify-content: center; width: 100%; gap: 2rem">
       <button
@@ -35,5 +34,12 @@
       </script>
       <button data-state-producer onclick="decrease">Minus</button>
     </div>
+    <script type="module" src="">
+      import { StateManager } from "/dist/index.js";
+
+      document.addEventListener("DOMContentLoaded", () => {
+        StateManager.Init();
+      });
+    </script>
   </body>
 </html>
