Refactor StateManager class to remove unnecessary console.log statement

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       align="center"
       data-state-initialvalue="0"
     >
-      current counter is {state ? state.counter.value + 10 : null} {state.counter.value}
+      current counter is {state.counter.value}
     </h1>
     <div style="display: flex; justify-content: center; width: 100%; gap: 2rem">
       <button
