Refactor StateManager class to use dot notation for action types

--- a/examples/user-input.html
+++ b/examples/user-input.html
@@ -59,7 +59,7 @@
       });
 
       document.querySelector("#age").addEventListener("input", (e) => {
-        stateManager.dispatch("user.setAge", e.target.value);
+        stateManager.dispatch("user/setAge", e.target.value);
       });
     </script>
   </body>
